allow to rewrite any classes by applying the parametric rewriter first and skipping existing value class